[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "grove-ledger"
version = "0.1.0"
description = "Water management ledger for garden nurseries"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
grove-ledger = "cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
